# from-flask-to-quart-course

./: README.md  merge_file.sh
code/2_quart_hello/quart-hello/: .quartenv  pyproject.toml
code/3_quart_counter/: docker-compose.yml
code/3_quart_counter/backend-service/: pyproject.toml  settings.toml
code/3_quart_counter/backend-service/my_app/: application.py  asgi.py  manage.py
code/3_quart_counter/backend-service/my_app/home_app/: views.py
code/3_quart_counter/counter_app/: Dockerfile  docker-compose.yml  settings.py
code/3_quart_counter/my-app/my_app/: Dockerfile
code/3_quart_hello/quart-hello/: .quartenv  README.md  hello.py  pyproject.toml
code/3_quart_hello/quart-hello/quart_hello/templates/: hello.html
code/3_quart_hello/quart-hello/templates/: hello.html
code/4_quart_counter/counter_app/: .quartenv  application.py  db.py  pyproject.toml
code/4_quart_counter/counter_app/migrations/: env.py
code/4_quart_counter/counter_app/migrations/versions/: 73874ab662d8_create_counter_table.py
code/4_quart_counter/counter_app/tests/: conftest.py  test_counter.py
code/5_quart_feed/quartfeed_app/: .gitignore  .quartenv  Dockerfile  README.md  application.py  db.py  docker-compose.yml  pyproject.toml  settings.py
code/5_quart_feed/quartfeed_app/home/: views.py
code/5_quart_feed/quartfeed_app/migrations/: env.py
code/5_quart_feed/quartfeed_app/migrations/versions/: 7102c89a5021_create_relationship_table.py  7c33d8dfbca6_create_user_table.py
code/5_quart_feed/quartfeed_app/relationship/: models.py  views.py
code/5_quart_feed/quartfeed_app/templates/: base.html  navbar.html
code/5_quart_feed/quartfeed_app/templates/user/: login.html  profile.html  profile_edit.html  register.html
code/5_quart_feed/quartfeed_app/tests/: conftest.py  test_relationship.py  test_user.py
code/5_quart_feed/quartfeed_app/user/: decorators.py  models.py  views.py
manuscript/: 0_Resources.md  1_Introduction.md  2_Fundamental_Concepts.md  3_Introduction_to_Quart.md  4_A_Quart_Database_Counter.md  5 QuartFeed (MySQL DB FriendFeed Clone)  5 QuartFeed (MySQL DB FriendFeed Clone).md  5 QuartFeed (PostgreSQL DB FriendFeed Clone).md  6 QChat (MongoDB + Websockets)  6 QChat (MongoDB + Websockets).md  7 Quart API.md  book.txt  sample.txt  subset.txt
