[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "A Quart counter application"
authors = ["Jorge Escobar <jorge@fromzero.io>"]
packages = [{include = "my_app"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "0.18.4"
werkzeug = "2.3.7"
dynaconf = "3.1.12"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
config_file = "mypy.ini"
ignore_missing_imports = true
