[tool.poetry]
name = "quart-hello"
version = "0.1.0"
description = ""
authors = ["Jorge Escobar <jorge@fromzero.io>"]
readme = "README.md"
packages = [{include = "quart_hello"}]


[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
