[tool.poetry]
name = "counter_app"
version = "0.1.0"
description = ""
authors = ["Jorge Escobar <jorge@fromzero.io>"]

[tool.poetry.dependencies]
python = "^3.7"
quart = "0.15.1"
python-dotenv = "0.10.1"
psycopg2-binary = "2.9.1"
databases = {version = "0.4.1", extras = ["postgresql"]}
sqlalchemy = "1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
