[tool.poetry]
name = "quartfeed_app"
version = "0.1.0"
description = ""
authors = ["Jorge Escobar <jorge@fromzero.io>"]

[tool.poetry.dependencies]
python = "^3.7"
quart = "^0.17.0"
python-dotenv = "^0.10.1"
psycopg2-binary = "^2.9.1"
databases = {version = "^0.6.1", extras = ["asyncpg"]}
sqlalchemy = "^1.4"
alembic = "^1.6.5"
pytest = "^6.2.1"
pytest-asyncio = "^0.15.1"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"